<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailWorkerFragment">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarDetail"
            app:title="@string/toolbarDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/icon_back"/>

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="UselessLeaf">
        <ImageView
            android:id="@+id/imageViewPhotoWorkerDetail"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_launcher"
            android:background="@drawable/round_background"
            android:scaleType="centerCrop"
            android:layout_marginTop="10dp"
            android:clipToOutline="true"
            android:contentDescription="@string/imageViewPhotoWorkerDetailDescription"/>

        <TextView
            android:id="@+id/textViewNameWorkerDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/textViewNameWorkerDetailHint"
            android:textColorHint="#78909C"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textViewPositionDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/textViewPositionDetailHint"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textViewConfidenceLevelDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/textViewConfidenceLevelDetailHint"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>