<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp">
    <ImageView
        android:id="@+id/imageViewPhotoWorker"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/imageViewPhotoWorkerDescription"/>

    <LinearLayout
        android:id="@+id/flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageViewPhotoWorker"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/textViewNameWorker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/textViewNameWorkerHint"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="@id/flow" />

        <TextView
            android:id="@+id/textViewPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/textViewPositionHint"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="@id/flow"
            app:layout_constraintTop_toBottomOf="@id/textViewNameWorker" />

        <TextView
            android:id="@+id/textViewConfidenceLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/textViewConfidenceLevel"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="@id/flow"
            app:layout_constraintTop_toBottomOf="@id/textViewNameWorker" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout >