<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".registration.RegistrationFragment">

    <TextView
        android:id="@+id/textViewTitleRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTitleRegistration"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@id/flow"
        android:layout_marginBottom="30dp"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_vertical"
        app:constraint_referenced_ids="textFieldEnterLoginRegistration, textFieldEnterPasswordRegistration,
        textFieldEnterPasswordRepeat, buttonRegistration "
        android:orientation="vertical"
        app:flow_verticalGap="10dp"
        app:flow_verticalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@id/guideline"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEnterLoginRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/textFieldEnterLoginHint"
        app:layout_constraintStart_toEndOf="@id/flow">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEnterPasswordRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/textFieldEnterPasswordHint"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toTopOf="@id/textFieldEnterLoginRegistration"
        app:layout_constraintStart_toStartOf="@id/flow">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEnterPasswordRepeat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/textFieldEnterPasswordRepeatHint"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toTopOf="@id/textFieldEnterLoginRegistration"
        app:layout_constraintStart_toStartOf="@id/flow">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonRegistration"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/textFieldEnterPasswordRepeat"
        app:layout_constraintStart_toStartOf="@id/flow"
        tools:ignore="VisualLintButtonSize" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>